--- a/thesis.tex
+++ b/thesis.tex
@@ -92,11 +92,11 @@
 \approvalpage
 
 \begin{abstract}
-Programmers forgo existing solutions to problems in other programming languages where software interoperation proves too cumbersome; they remake solutions, rather than reuse them. To facilitate reuse, interoperation must resolve language incompatibilities transparently. To address part of this problem, we present a model of computation that resolves lazy and eager evaluation strategies using dual notions of evaluation contexts and values to mirror the lazy evaluation strategy in the eager one. This method could be extended to resolve incompatible evaluation strategies for evaluation contexts common to any pair of languages.
+Programmers forgo existing solutions to problems in other programming languages where software interoperation proves too cumbersome; they remake solutions, rather than reuse them. To facilitate reuse, interoperation must resolve language incompatibilities transparently. To address part of this problem, we present a model of computation that resolves incompatible lazy and eager evaluation strategies using dual notions of evaluation contexts and values to mirror the lazy evaluation strategy in the eager one. This method could be extended to resolve incompatible evaluation strategies for any pair of languages with common expressions.
 \end{abstract}
 
 \begin{acknowledgements}
-\indent\indent I thank my family and friends, especially my parents, Jerry and Jo Ann Faught, and my uncle, Tim Mournian, for their encouragement, advice, and support, without which this could not have been possible.
+\indent\indent I am grateful for the encouragement and support of my parents, Jerry and Jo Ann, and my uncle, Tim. I could not have done this without them.
 \end{acknowledgements}
 
 \tableofcontents
