Added the Felleisen citation. Revised the theorem items.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,12 +1,3 @@
-@mastersthesis{
-  kinghorn07,
-  author = {David L. Kinghorn},
-  title = {Preserving Parametricity While Sharing Higher-Order, Polymorphic Functions Between Scheme And ML},
-  school = {California Polytechnic State University, San Luis Obispo},
-  year = {2007},
-  month = {June},
-}
-
 @article{
   matthews07,
   author = {Jacob Matthews and Robert Bruce Findler},
@@ -20,4 +11,12 @@
   doi = {http://doi.acm.org/10.1145/1190215.1190220},
   publisher = {ACM},
   address = {New York, NY, USA},
+}
+
+@book{
+  felleisen09,
+  author = {Matthias Felleisen and Robert Bruce Findler and Matthew Flatt},
+  title = {Semantics Engineering with PLT Redex},
+  publisher = {The MIT Press},
+  year = {2009}
 }
