Changed the captions for the unbrand and equality figures. Reordered the figure summary paragraph to match the figure order and use active voice.

--- a/model/unbrand.tex
+++ b/model/unbrand.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Convert conversion schemes to types.}
+\caption{The unbrand function.}
 \centering
 \begin{tabular}{rcl}
 
