--- a/chapter2.tex
+++ b/chapter2.tex
@@ -140,11 +140,15 @@ By structural induction.
 
 The conversion of type abstractions between Haskell and ML was not straightforward. The application of a converted type abstraction cannot substitute the type argument into the nested expression because the type argument is meaningless in the nested expression's language. Instead, the application substitutes the type argument and a lump into the boundary's outer and inner types, respectively. Since the natural embedding requires the boundary's outer and inner types to be equal \cite{matthews07}, we use a new notion of equality called lump equality that allows lumps within the boundary's inner type to match any corresponding type in the boundary's outer type.
 
-Legends of symbol and syntax names are presented in figures \ref{figsymbols}-\ref{figsyntax2}; Haskell is presented in figures \ref{fighs}-\ref{fighsos}; ML is presented in figures \ref{figms}-\ref{figmsos}; Scheme is presented in figures \ref{figss}-\ref{figsmos}; the unbrand function is presented in figure \ref{figunbrand}; and lump equality is presented in figure \ref{figequality}.
+Figures \ref{figsymbols}--\ref{figsyntax2} present legends of symbol and syntax names; figure \ref{figunbrand} presents the unbrand function; figure \ref{figequality} presents the lump equality relation; figures \ref{fighs}--\ref{fighsos} present Haskell; figures \ref{figms}--\ref{figmsos} present ML; and figures \ref{figss}--\ref{figsmos} present Scheme.
 
 \clearpage
 
 \input{model/symbols.tex}
+
+\clearpage
+
+\input{model/syntax.tex}
 
 \clearpage
 
@@ -153,10 +157,6 @@ Legends of symbol and syntax names are presented in figures \ref{figsymbols}-\re
 \clearpage
 
 \input{model/equality.tex}
-
-\clearpage
-
-\input{model/syntax.tex}
 
 \clearpage
 
