--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -209,7 +209,7 @@ $(\vartyh \neq \tylump)$
 \newcommand{\oshmtabs}{\redruleh{\oshmtabsl}{\oshmtabsr}}
 
 \begin{figure}[p]
-\caption{Haskell-ML operational semantics}
+\caption{The Haskell-ML operational semantics.}
 \centering
 \begin{tabular}{l}
 
