--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Haskell-Scheme operational semantics.}
+\caption{The Haskell-Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
