--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{ML-Scheme operational semantics.}
+\caption{The ML-Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
