--- a/model/scheme/operational-semantics/haskell.tex
+++ b/model/scheme/operational-semantics/haskell.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Scheme-Haskell operational semantics.}
+\caption{The Scheme-Haskell operational semantics.}
 \centering
 \begin{tabular}{l}
 
