--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Scheme-ML operational semantics.}
+\caption{The Scheme-ML operational semantics.}
 \centering
 \begin{tabular}{l}
 
