--- a/model/scheme/operational-semantics/scheme.tex
+++ b/model/scheme/operational-semantics/scheme.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Scheme operational semantics.}
+\caption{The Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
