--- a/model/scheme/syntax.tex
+++ b/model/scheme/syntax.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-\caption{Scheme syntax and evaluation contexts.}
+\caption{The Scheme syntax and evaluation contexts.}
 \centering
 \begin{tabular}{lcl}
 
