Fixed figure caption spacing.

--- a/thesis.tex
+++ b/thesis.tex
@@ -104,6 +104,7 @@ Programmers forgo existing solutions to problems in other programming languages 
 \end{frontmatter}
 \pagestyle{plain}
 \renewcommand{\baselinestretch}{1.66}
+\setlength{\belowcaptionskip}{12pt}
 
 \input{macros.tex}
 \input{chapter1.tex}
