Missing word/spelling fixes in ack and ch2.

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -4,7 +4,7 @@ To preserve the transparency of interoperation, ML and Scheme must not force Has
 
 Since ML and Scheme do not force Haskell to evaluate in some evaluation contexts, we must factor Haskell boundaries out of ML and Scheme evaluation context nonterminals, $\symcont$, into new evaluation context nonterminals. We name these new nonterminals $\symconf$ because they allow ML and Scheme to force Haskell to evaluate, and we rename the primary evaluation context nonterminals from $\symcont$ to $\symconu$ (unforced) because they do not. Likewise, we factor Haskell boundaries out of ML and Scheme value nonterminals, $\symvalt$,  into new value nonterminals. We name these new nonterminals $\symvalf$ (forced) and rename the old value nonterminals from $\symvalt$ to $\symvalu$ (unforced). We rename Haskell evaluation contexts and values to $\symconf$ and $\symvalf$, respectively.
 
-In ML and Scheme, we tie $\symconf$ and $\symconu$ together by replacing $\symconu$ with $\symconf$ in the syntax and operational semantics in all evaluation contexts except the incompatible ones. Likewise, we tie $\symvalf$ and $\symvalu$ together by replacing $\symvalu$ with $\symvalf$ in the syntax and operational semantics in those same evaluation contexts. $\symconf$ evaluation contexts produce $\symvalf$ values, and $\symconu$ evaluation contexts produce $\symvalu$ values. $\symconu$ only applies to incompatible evalation contexts, and $\symconf$ applies to all others. ML and Scheme use $\symconf$ to evaluate expressions. We rename the meta evaluation context from $\varconmt$ to $\varconm$.
+In ML and Scheme, we tie $\symconf$ and $\symconu$ together by replacing $\symconu$ with $\symconf$ in the syntax and operational semantics in all evaluation contexts except the incompatible ones. Likewise, we tie $\symvalf$ and $\symvalu$ together by replacing $\symvalu$ with $\symvalf$ in the syntax and operational semantics in those same evaluation contexts. $\symconf$ evaluation contexts produce $\symvalf$ values, and $\symconu$ evaluation contexts produce $\symvalu$ values. $\symconu$ only applies to incompatible evaluation contexts, and $\symconf$ applies to all others. ML and Scheme use $\symconf$ to evaluate expressions. We rename the meta evaluation context from $\varconmt$ to $\varconm$.
 
 Transparency is restored for interoperation in all cases with our changes to the model of computation of Matthews and Findler.
 
