--- a/thesis.tex
+++ b/thesis.tex
@@ -96,7 +96,7 @@ Programmers forgo existing solutions to problems in other programming languages 
 \end{abstract}
 
 \begin{acknowledgements}
-\indent\indent I am grateful for support of my parents, Jerry and Jo Ann, and my uncle, Tim. I could not have done this without them.
+\indent\indent I am grateful for the support of my parents, Jerry and Jo Ann, and my uncle, Tim. I could not have done this without them.
 \end{acknowledgements}
 
 \tableofcontents
