Added the abbreviated soundness proof back, along with the citation to Kinghorn.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,3 +20,12 @@
   publisher = {The MIT Press},
   year = {2009}
 }
+
+@mastersthesis{
+  kinghorn07,
+  author = {David L. Kinghorn},
+  title = {Preserving Parametricity While Sharing Higher-Order, Polymorphic Functions Between Scheme And ML},
+  school = {California Polytechnic State University, San Luis Obispo},
+  year = {2007},
+  month = {June},
+}
