--- a/thesis.tex
+++ b/thesis.tex
@@ -110,6 +110,7 @@ Programmers forgo existing solutions to problems in other programming languages 
 \input{chapter1.tex}
 \input{chapter2.tex}
 \input{chapter3.tex}
+\input{chapter4.tex}
 
 \clearpage
 
