Minor wording change.

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter{Model of Computation}
 
-To preserve the transparency of interoperation, ML and Scheme must not force Haskell to evaluate reducible expressions in Haskell boundaries in the incompatible evaluation contexts, and force their evaluation in all other evaluation contexts. Haskell boundaries must be a new kind of value that ML and Scheme can force to become a reducible expression in certain evaluation contexts, and thereby force the evaluation of the inner Haskell reducible expressions to Haskell values and the conversion of those values to ML or Scheme.
+To preserve the transparency of interoperation, ML and Scheme must not force Haskell to evaluate reducible expressions in Haskell boundaries in the incompatible evaluation contexts, and must force their evaluation in all other evaluation contexts. Haskell boundaries must be a new kind of value that ML and Scheme can force to become a reducible expression in certain evaluation contexts, and thereby force the evaluation of the inner Haskell reducible expressions to Haskell values and the conversion of those values to ML or Scheme.
 
 Since ML and Scheme do not force Haskell to evaluate in some evaluation contexts, we must factor Haskell boundaries out of ML and Scheme evaluation context nonterminals, $\symcont$, into new evaluation context nonterminals. We name these new nonterminals $\symconf$ because they allow ML and Scheme to force Haskell to evaluate, and we rename the primary evaluation context nonterminals from $\symcont$ to $\symconu$ (unforced) because they do not. Likewise, we factor Haskell boundaries out of ML and Scheme value nonterminals, $\symvalt$,  into new value nonterminals. We name these new nonterminals $\symvalf$ (forced) and rename the old value nonterminals from $\symvalt$ to $\symvalu$ (unforced). We rename Haskell evaluation contexts and values to $\symconf$ and $\symvalf$, respectively.
 
