Fixed the copyright and committee pages for formatting requirements.

--- a/thesis.tex
+++ b/thesis.tex
@@ -45,6 +45,7 @@
 \usepackage{xspace}
 \usepackage{color}
 \usepackage{epic}
+\usepackage{textcomp}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
